--- a/action.yml
+++ b/action.yml
@@ -13,5 +13,5 @@ jobs:
             - name: Setup Packwiz
               run: go install github.com/packwiz/packwiz@latest
             - name: Update
-              run: packwiz update --all
+              run: yes | packwiz update --all
             - uses: stefanzweifel/git-auto-commit-action@v4
