--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: 'Update Packwiz Mods'
 description: 'Update a minecraft modpack using Packwiz'
+branding:
+  icon: 'download'
+  color: 'purple'
 on:
     workflow_dispatch:
 jobs:
